k3s-dev/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: wordpress
    type: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      type: database
  template:
    metadata:
      labels:
        app: wordpress
        type: database
    spec:
      containers:
        - name: mysql
          image: mariadb
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts:
            - name: mysql
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql
          hostPath:
            path: /home/jairo/mysql-data
            type: Directory
