k3s-dev/mysql-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql
    type: database
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: db-port
  type: ClusterIP
